--- a/step_definitions/Steps_report_progress.cls
+++ b/step_definitions/Steps_report_progress.cls
@@ -12,8 +12,10 @@ Option Explicit
 Public Sub When__INT_steps_are_reported_as_successful_34289162846E(example_context As TContext, step_expressions As Collection)
     'When  {integer} steps are reported as successful
     Dim index As Integer
+    Dim session As TSession
     
+    Set session = example_context.get_value("session")
     For index = 1 To step_expressions(1)
-        example_context.get_value("session").reporter.report REPORT_MSG_TYPE_STEP, "Given a valid step", STATUS_OK
+        session.log_event EVENT_RUN_STEP_FINISHED, vbNullString, "Given a valid step", SECTION_TYPE_STEP, STATUS_OK
     Next
 End Sub
