--- a/source/TExampleRunner.cls
+++ b/source/TExampleRunner.cls
@@ -34,7 +34,7 @@ Public Sub run_example(example As TExample)
     Set context = New TContext
     step_runner.setup m_session
     step_status = vbNullString
-    m_session.reporter.report REPORT_MSG_TYPE_EXAMPLE_TITLE, example.OriginalHeadline
+    m_session.log_event EVENT_RUN_EXAMPLE_STARTED, example.description, example.OriginalHeadline, SECTION_TYPE_EXAMPLE
     For Each step In example.steps
         err_msg = vbNullString
         previous_step_status = step_status
@@ -50,8 +50,7 @@ Public Sub run_example(example As TExample)
             'this is a hack because of the broken exception handling in vba (e.g. vba will overwrite the custom err descriptions)
             If step_status = STATUS_PENDING Then err_msg = TSpec.LastFailMsg
         End If
-        m_session.log_event LOG_EVENT_RUN_STEP, section_name:=step.OriginalStepDefinition, section_status:=step_status
-        m_session.reporter.report REPORT_MSG_TYPE_STEP, step.OriginalStepDefinition, step_status, err_msg
+        m_session.log_event EVENT_RUN_STEP_FINISHED, err_msg, step.OriginalStepDefinition, SECTION_TYPE_STEP, step_status
     Next
-    m_session.log_event LOG_EVENT_RUN_EXAMPLE, section_name:=example.OriginalHeadline
+    m_session.log_event EVENT_RUN_EXAMPLE_FINISHED, example.description, example.OriginalHeadline, SECTION_TYPE_EXAMPLE
 End Sub
